Enabled Hotplugging Pixhawk

--- a/.companion.rc
+++ b/.companion.rc
@@ -13,7 +13,7 @@ for default_param_file in *; do
 done
 
 if [ ! -f /home/pi/.updating ]; then
-	sudo -H -u pi screen -dm -S mavproxy $COMPANION_DIR/scripts/start_mavproxy_telem_splitter.sh
+	sudo -H -u pi screen -dm -S mavproxy $COMPANION_DIR/tools/telem.py
 	sudo -H -u pi screen -dm -S video $COMPANION_DIR/tools/streamer.py 
 	sudo -H -u pi screen -dm -S webui $COMPANION_DIR/scripts/start_webui.sh
 	sudo -H -u pi screen -dm -S webterminal $COMPANION_DIR/scripts/start_webterminal.sh
