--- a/params/dhcpd-server.conf
+++ b/params/dhcpd-server.conf
@@ -3,6 +3,6 @@
 # Add subnet declaration for the server
 # Define range of addresses that the server can assign to other devices
 subnet 192.168.2.0 netmask 255.255.255.0 {
-	range 192.168.2.3 192.168.2.254;
+	range 192.168.2.1;
 }
 
